CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ORB_SLAM2)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_COMPILE_OPTIONS(-Wall -O3 -march=native)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules)

FIND_PACKAGE(OpenCV 3.0 QUIET)
IF (NOT OpenCV_FOUND)
  FIND_PACKAGE(OpenCV 2.4.3 QUIET)
  IF (NOT OpenCV_FOUND)
    MESSAGE(FATAL_ERROR "OpenCV > 2.4.3 not found.")
  ENDIF ()
ENDIF ()

FIND_PACKAGE(Eigen3 3.1.0 REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${EIGEN3_INCLUDE_DIR}
    ${Pangolin_INCLUDE_DIRS}
)

FILE(GLOB ORB_INCLUDE include/*.h)
FILE(GLOB ORB_SOURCES src/*.cc)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${ORB_SOURCES} ${ORB_INCLUDE})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${OpenCV_LIBS}
    ${EIGEN3_LIBS}
    ${Pangolin_LIBRARIES}
    ${PROJECT_SOURCE_DIR}/Thirdparty/DBoW2/lib/libDBoW2.so
    ${PROJECT_SOURCE_DIR}/Thirdparty/g2o/lib/libg2o.so
    )
